--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,11 +22,23 @@
 <div class="well logo">
     <h1 class="title">Reward Board</h1>
 </div>
-<div class="badge-container">
-    <div class="info-badge" id="totaldemoratings"></div>
-    <div class="info-badge" id="unclaimeddemoratings"></div>
-    <div class="info-badge" id="totalprofessionals"></div>
-    <div class="info-badge" id="unclaimedprofessionals"></div>
+<div class="badge-container container">
+    <div class="info-badge" id="totaldemoratings">
+        <div class="content-highlight">15</div>
+        <div class="content-description">five star demo ratings</div>
+    </div>
+    <div class="info-badge" id="unclaimeddemoratings">
+        <div class="content-highlight">5</div>
+        <div class="content-description">unclaimed demo ratings</div>
+    </div>
+    <div class="info-badge" id="totalprofessionals">
+        <div class="content-highlight">37</div>
+        <div class="content-description">professional of the sprint</div>
+    </div>
+    <div class="info-badge" id="unclaimedprofessionals">
+        <div class="content-highlight">10</div>
+        <div class="content-description">unclaimed professional of the sprint</div>
+    </div>
 </div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
